<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="support_message_theme" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message_body" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_android_course_link" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="support_message_email" translatable="false">gileren8613@yandex.ru</string>
    <string name="practicum_user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="empty_search_text">Ничего не нашлось</string>
    <string name="search_connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="default_audio_playback_time" translatable="false">00:00</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="liked_songs_empty">Ваша медиатека пуста</string>
    <string name="playlists_empty">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="new_playlist_title_hint">Название*</string>
    <string name="new_playlist_description_hint">Описание</string>
    <string name="create">Создать</string>
    <string name="new_playlist_exit_dialog_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_exit_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist_created_message">Плейлист \"%1$s\" создан</string>
    <plurals name="number_of_tracks">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_added_to_playlist">Добавлено в плейлист \"%1$s\"</string>
    <string name="track_already_added">Трек уже добавлен в плейлист \"%1$s\"</string>
    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
    <string name="remove_track_title">Удалить трек</string>
    <string name="remove_track_description">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="remove">Удалить</string>
    <string name="empty_playlist_share_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_confirmation_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="playlist_additional_info" translatable="false">%1$s • %2$s</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="no_tracks_in_playlist">В плейлист ещё не добавлен ни один трек</string>
</resources>