<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dynamic.background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:src="@drawable/arrow_back_nav_bar"
            android:scaleType="centerInside"
            android:foreground="?attr/selectableItemBackground"
            app:tint="@color/dynamic.text.primary" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings"
            android:textSize="@dimen/YS_22"
            android:textColor="@color/dynamic.text.primary"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingStart="@dimen/medium_height"
        android:paddingEnd="12dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_cell_height">

            <TextView
                style="@style/SettingsButtonTextStyle"
                android:text="@string/dark_theme"/>
            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/share_app_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_cell_height"
            android:foreground="?attr/selectableItemBackground" >

            <TextView
                style="@style/SettingsButtonTextStyle"
                android:text="@string/share_app"/>
            <ImageView
                style="@style/SettingsImageViewStyle"
                android:src="@drawable/share" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/write_to_support_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_cell_height"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                style="@style/SettingsButtonTextStyle"
                android:text="@string/write_to_support"/>
            <ImageView
                style="@style/SettingsImageViewStyle"
                android:src="@drawable/support" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/user_agreement_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_cell_height"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                style="@style/SettingsButtonTextStyle"
                android:text="@string/user_agreement"/>
            <ImageView
                style="@style/SettingsImageViewStyle"
                android:src="@drawable/arrow_right" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>