<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YPBlue"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:text="@string/app_name"
            android:textColor="@color/YPWhite"
            android:textSize="22sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:paddingBottom="28dp"
        android:showDividers="middle"
        android:divider="@drawable/clear_medium_divider">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/YPWhite"
            android:text="@string/search"
            android:textSize="@dimen/primary_button_text_size"
            android:textAllCaps="false"
            android:textColor="@color/YPBlack"
            app:cornerRadius="@dimen/medium_corner_radius"
            app:icon="@drawable/search_loupe"
            app:iconGravity="textStart"
            app:iconTint="@color/YPBlack" />

        <Button
            android:id="@+id/media_library_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/YPWhite"
            android:text="@string/media_library"
            android:textSize="@dimen/primary_button_text_size"
            android:textAllCaps="false"
            android:textColor="@color/YPBlack"
            app:cornerRadius="@dimen/medium_corner_radius"
            app:icon="@drawable/media_library"
            app:iconGravity="textStart"
            app:iconTint="@color/YPBlack" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/YPWhite"
            android:text="@string/settings"
            android:textSize="@dimen/primary_button_text_size"
            android:textAllCaps="false"
            android:textColor="@color/YPBlack"
            app:cornerRadius="@dimen/medium_corner_radius"
            app:icon="@drawable/setting"
            app:iconGravity="textStart"
            app:iconTint="@color/YPBlack" />

    </LinearLayout>

</LinearLayout>