<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_56"
        android:background="@color/dynamic.background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/size_48"
            android:layout_height="@dimen/size_48"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/size_8"
            android:foreground="?attr/selectableItemBackground"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_back_nav_bar"
            app:tint="@color/dynamic.text.primary" />

        <TextView
            android:id="@+id/fragment_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/size_12"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:text="@string/new_playlist"
            android:textColor="@color/dynamic.text.primary"
            android:textSize="@dimen/YS_22" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="@dimen/size_0"
                android:layout_height="@dimen/size_0"
                android:layout_marginHorizontal="@dimen/size_24"
                android:layout_marginTop="26dp"
                android:adjustViewBounds="false"
                android:background="@drawable/dashed_new_playlist_frame"
                android:scaleType="center"
                android:src="@drawable/add_photo"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/size_0"
                android:layout_height="@dimen/size_0"
                android:layout_marginHorizontal="@dimen/size_16"
                android:layout_marginTop="@dimen/size_32"
                app:boxStrokeColor="@color/dynamic.foreground.textInputEmptyBoxColor"
                app:hintTextColor="@color/dynamic.foreground.textInputEmptyBoxColor"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:layout_constraintHeight="@dimen/size_56"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/ys_display_regular"
                    android:hint="@string/new_playlist_title_hint"
                    android:inputType="text"
                    android:lines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/YS_16" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/size_0"
                android:layout_height="@dimen/size_0"
                android:layout_marginHorizontal="@dimen/size_16"
                android:layout_marginTop="@dimen/size_16"
                app:boxStrokeColor="@color/dynamic.foreground.textInputEmptyBoxColor"
                app:hintTextColor="@color/dynamic.foreground.textInputEmptyBoxColor"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:layout_constraintHeight="@dimen/size_56"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/ys_display_regular"
                    android:hint="@string/new_playlist_description_hint"
                    android:inputType="text"
                    android:lines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/YS_16" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_button"
                android:layout_width="@dimen/size_0"
                android:layout_height="@dimen/size_0"
                android:layout_marginHorizontal="@dimen/size_16"
                android:layout_marginBottom="@dimen/size_32"
                android:backgroundTint="@color/action_button_background_tint"
                android:enabled="false"
                android:fontFamily="@font/ys_text_regular"
                android:insetTop="@dimen/size_0"
                android:insetBottom="@dimen/size_0"
                android:letterSpacing="0"
                android:stateListAnimator="@null"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/YPWhite"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight="@dimen/size_44"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>